--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -4,10 +4,15 @@
     <style type="text/css">
       html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
     </style>
+      <script type="text/javascript">
+      function goToMap() {
+          window.location.href="https://hackatondd.herokuapp.com/map";
+        }
+      </script>
   </head>
   <body>
     <div id="mainpage">
-        <button type="button">Click Me!</button>
+        <button type="button" onclick="goToMap()">Click Me!</button>
     </div>
     <div>
   </body>
