--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+        <meta charset="UTF-8">
+        <title>angular-carousel demo</title>
+        <meta name="viewport" content="width=620, user-scalable=no">
+        <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+        <link href='/angular-carousel.css' rel='stylesheet' type='text/css'>
+        <link href='/demo.css' rel='stylesheet' type='text/css'>
     <style type="text/css">
       html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+
     </style>
       <script type="text/javascript">
       function goToMap() {
