--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="DemoApp"> 
   <head>
         <meta charset="UTF-8">
         <title>angular-carousel demo</title>
@@ -161,7 +161,8 @@
     </script>
 
   </head>
-  <body>
+<body ng-controller="DemoCtrl"> 
+
     <div id="mainpage">
         <button type="button" onclick="goToMap()">Click Me!</button>
     </div>
