--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -14,19 +14,10 @@
     </div>
     
         <a href="https://github.com/revolunet/angular-carousel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
-
-        <h1>AngularJS Touch Carousel</h1>
-        <div class='intro'>
-            Transform your ng-repeat or DOM nodes in a mobile-friendly carousel just by adding a 'rn-carousel' attribute to your HTML; AngularJS directives FTW :)<br><br>
-            Carousels are data-bound to your ngRepeat collections and can be DOM buffered (good for performance)
-            <br><br>
-            Swipe these demos with your mouse or finger
-        </div>
-
         <div>
             <div >
-                <h3>buffered ngRepeat with custom transition</h3>
-                <div class="details">Use the 'hexagon' transition. index is shared with the carousel below.
+                <h3>Welcome to the Digital Store</h3>
+                <div class="details">Scroll the transition to view our products.
                 </div>
                 <div class="carousel-demo">
                     <ul rn-carousel rn-carousel-index="carouselIndex3" rn-carousel-transition="hexagon" rn-carousel-buffered class="carousel3">
