--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -12,8 +12,7 @@
         <div id="mainpage">
       <button type="button" onclick="goToMap()">Click Me!</button>
     </div>
-    
-        <a href="https://github.com/revolunet/angular-carousel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+        <a href="https://eu.deloittedigital.com/en/home"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Powered by Deloitte SheriffOne"></a>
         <div>
             <div >
                 <h3>Welcome to the Digital Store</h3>
