--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -10,7 +10,23 @@
     </head>
     <body ng-controller="DemoCtrl">
         <div id="mainpage">
-      <button type="button" onclick="goToMap()">Click Me!</button>
+<style> .styled-button-5 {
+                background-color:#2B2B2B;
+                color:#8FCC00;
+                font-family:'Helvetica Neue',sans-serif;
+                font-size:18px;
+                line-height:30px;
+                border-radius:20px;
+                -webkit-border-radius:20px;
+                -moz-border-radius:20px;
+                border:0;
+                text-shadow:#C17C3A 0 -1px 0;
+                width:120px;
+                height:32px
+}  </style>               
+
+
+      <button type="button" class="styled-button-5" onclick="goToMap()">Enter</button>
     </div>
         <a href="https://eu.deloittedigital.com/en/home"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Powered by Deloitte SheriffOne"></a>
         <div>
