--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -7,40 +7,29 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0ymRb6jQAsgtoUnMO10-x6CjUe0PZK88">
     </script>
-    <script type="text/javascript">
-      function initialize() {
-        var mapOptions = {
-          center: { lat: 39.8282, lng: -98.5795},
-          zoom: 5
-        };
-        var map = new google.maps.Map(document.getElementById('map-canvas'),
-            mapOptions);
 
-        function addMarker(location) {
-          var marker = new google.maps.Marker({
-              position: {lat: location.lat, lng: location.lon},
-              map: map,
-              title: null
-          });
-          var infowindow = new google.maps.InfoWindow({
-              content: unescape(location.name)
-          });
-          infowindow.open(map,marker);
-        }
+    <!-- Include jQuery Mobile stylesheets -->
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 
-        <% contact_locations.forEach(function(location) { %>
-          addMarker(JSON.parse('<%- JSON.stringify(location) %>'));
-        <% }); %>
+    <!-- Include the jQuery library -->
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
-        setTimeout(function() {
-          map.setCenter({lat: 39.8282, lng: -98.5795});
-        }, 800);
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
+    <!-- Include the jQuery Mobile library -->
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
   </head>
   <body>
-    <div id="map-canvas"></div>
+    <div id="map-canvas">
+      <ul data-role="listview" data-inset="true">
+          <li><a href="#"><img src="../_assets/img/gf.png" alt="France" class="ui-li-icon ui-corner-none">France</a></li>
+          <li><a href="#"><img src="../_assets/img/de.png" alt="Germany" class="ui-li-icon">Germany</a></li>
+          <li><a href="#"><img src="../_assets/img/gb.png" alt="Great Britain" class="ui-li-icon">Great Britain</a></li>
+          <li><a href="#"><img src="../_assets/img/fi.png" alt="Finland" class="ui-li-icon">Finland</a></li>
+          <li><a href="#"><img src="../_assets/img/us.png" alt="United States" class="ui-li-icon ui-corner-none">United States</a></li>
+      </ul>
+
+
+
+    </div>
     <div>
   </body>
 </html>
