--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -43,8 +43,10 @@
                         text-shadow:#C17C3A 0 -1px 0;
                         width:120px;
                         height:32px
-        }  </style>               
-        <button type="button" class="styled-button-5" onclick="goToMap()">Enter</button>
+        }  </style>  
+        <div>             
+          <button type="button" class="styled-button-5" onclick="goToMap()">Enter</button>
+        </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-touch.min.js"></script>
