--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -44,7 +44,7 @@
                         width:120px;
                         height:32px
         }  </style>  
-        <div>             
+        <div style="">             
           <button type="button" class="styled-button-5" onclick="goToMap()">Enter</button>
         </div>
     </body>
