--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -11,7 +11,7 @@
     <body ng-controller="DemoCtrl">
         <div id="mainpage">
     </div>
-        <a href="https://eu.deloittedigital.com/en/home"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Powered by Deloitte SheriffOne"></a>
+        <a href="https://eu.deloittedigital.com/en/home"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/public/sheriff.png" alt="Powered by Deloitte SheriffOne"></a>
         <div>
             <div >
                 <h3>Welcome to the Digital Store</h3>
