--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -20,15 +20,10 @@
   <body>
     <div id="map-canvas">
       <ul data-role="listview" data-inset="true">
-          <li><a href="#"><img src="../_assets/img/gf.png" alt="France" class="ui-li-icon ui-corner-none">France</a></li>
-          <li><a href="#"><img src="../_assets/img/de.png" alt="Germany" class="ui-li-icon">Germany</a></li>
-          <li><a href="#"><img src="../_assets/img/gb.png" alt="Great Britain" class="ui-li-icon">Great Britain</a></li>
-          <li><a href="#"><img src="../_assets/img/fi.png" alt="Finland" class="ui-li-icon">Finland</a></li>
-          <li><a href="#"><img src="../_assets/img/us.png" alt="United States" class="ui-li-icon ui-corner-none">United States</a></li>
+          <li><a href="#"><img src="" alt="Nome" class="ui-li-icon ui-corner-none">France</a></li>
+          <li><a href="#"><img src="" alt="Cognome" class="ui-li-icon">Germany</a></li>
+          <li><a href="#"><img src="" alt="Indirizzo" class="ui-li-icon">Great Britain</a></li>
       </ul>
-
-
-
     </div>
     <div>
   </body>
