--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -70,7 +70,7 @@
                     id: (i + 1),
                     label: 'slide #' + (i + 1),
                     //img: 'http://lorempixel.com/450/300/' + style + '/' + ((i + 1) % 20) ,
-                    img: '/public/img' + i + '.jpg'
+                    img: '/img' + i + '.jpg'
                     //color: $scope.colors[ (i*10) % $scope.colors.length],
                     //odd: (i % 2 === 0)
                 };
