--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -24,16 +24,19 @@
                         </li>
                     </ul>
                 </div>-->
+                 <div ng-controller="DemoCtrl" id="slides_control">
+    <div>
                 <carousel interval="myInterval">
-                  <slide ng-repeat="slide in slides2" active="slide.active">
-                    <img ng-src="{{slide.image}}">
+                  <slide ng-repeat="slide2 in slides2" active="slide.active">
+                    <img ng-src="{{slide2.image}}">
                     <div class="carousel-caption">
                       <h4>Slide {{$index+1}}</h4>
                     </div>
                   </slide>
                 </carousel>
 
-
+          </div>
+        </div>
             </div>
         </div>
         <p>&nbsp;</p>
