--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -89,7 +89,7 @@
      -->
     <script>
         angular.module('DemoApp', [
-            'angular-carousel'
+            'angular-carousel','ui.bootstrap']
         ])
         .controller('DemoCtrl', function($scope) {
               $scope.myInterval = 3000;
