--- a/views/preload.ejs
+++ b/views/preload.ejs
@@ -81,6 +81,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-touch.min.js"></script>
 
     <script src="/angular-carousel.min.js"></script>
+    <script src="/ui.bootstrap.js"></script>
     <!--<script src="./src/angular-carousel.js"></script>
     <script src="./src/directives/rn-carousel.js"></script>
     <script src="./src/directives/rn-carousel-indicators.js"></script>
